# vector-ox

./: Makefile  README.md  pyproject.toml  training_data.txt
tests/: __init__.py  test_board.py
vector_db/95480104-b29e-4f28-a7e2-e95632ead6cb/: index_metadata.pickle
vector_ox/: __init__.py  board.py  bot_tester.py  bots.py  data_generator.py  game.py  setup.py  vector_builder.py
