[tool.poetry]
name = "vector-ox"
version = "0.1.0"
description = "A noughts-and-crosses game with vector database integration and multiple bot modes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "vector_ox"}]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.0"
chromadb = "^0.4.0"
click = "^8.1.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88 